Bug 1606643 - Race condition in ZipArchiveLogger r=valentin

A global instance of ZipArchiveLogger is used on multiple threads when the logging is turned on. This patch adds a lock to synchronize the access.

Differential Revision: https://phabricator.services.mozilla.com/D60537